--- a/package.json
+++ b/package.json
@@ -45,12 +45,6 @@
     "@testing-library/user-event": "^14.4.3",
     "babel-eslint": "10.0.3",
     "eslint": "6.1.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "flow-bin": "0.118.0",
-    "msw": "^1.2.0",
-    "react-test-renderer": "^16.12.0",
-    "sass": "1.55.0",
-    "sass-lint": "^1.13.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-cypress": "^2.12.1",
@@ -59,6 +53,24 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.31.11",
-    "prettier": "^1.16.4"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "flow-bin": "0.118.0",
+    "msw": "^1.2.0",
+    "prettier": "^1.16.4",
+    "react-test-renderer": "^16.12.0",
+    "sass": "1.55.0",
+    "sass-lint": "^1.13.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
