--- a/.gitignore
+++ b/.gitignore
@@ -86,6 +86,7 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
+.DS_Store
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
