--- a/.editorconfig
+++ b/.editorconfig
@@ -6,4 +6,4 @@ end_of_line = lf
 indent_style = space
 indent_size = 4
 trim_trailing_whitespaces = true
-insert_final_newline = true
+insert_final_newline = false
